--- a/exemplosParaPraticarAutomacao/bdd/report/output/folder/6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2.html
+++ b/exemplosParaPraticarAutomacao/bdd/report/output/folder/6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2.html
@@ -58,7 +58,7 @@
             <a href="capabilities.html"><i class="fa fa-book"></i> Requirements</a>
         </li>
     </ul>
-    <span class="date-and-time"><a href="build-info.html"><i class="fa fa-info-circle"></i></a> Report generated 19-01-2018 11:37</span>
+    <span class="date-and-time"><a href="build-info.html"><i class="fa fa-info-circle"></i></a> Report generated 19-01-2018 14:51</span>
     <br style="clear:left"/>
 </div>
     <div class="clr"></div>
@@ -98,9 +98,9 @@
                 <table class="outcome-header">
                     <tr>
                         <td colspan="2" class="test-title-bar">
-                            <span class="outcome-icon"><i class='fa fa-square-o pending-icon fa-3x' title='PENDING'></i></span>
+                            <span class="outcome-icon"><i class='fa fa-check-square-o success-icon fa-3x' title='SUCCESS'></i></span>
                             <span class="test-case-title">
-                                    <span class="pending-color">
+                                    <span class="success-color">
                                     Carcular Valor De Uma Entrega Do CEP A At&eacute; CEP B
                                         <span class="related-issue-title"></span>
                                 </span>
@@ -133,14 +133,32 @@
                     <th>#</th>
                         <th>Url</th>
                         <th>Opcao</th>
+                        <th>Datapostagem</th>
+                        <th>Ceporigem</th>
+                        <th>Cepdestino</th>
+                        <th>Tservico</th>
+                        <th>Formato</th>
+                        <th>Embalagem</th>
                 </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="test-PENDING"><a href="#0">1</a></td>
-                            <td class="test-PENDING"><a href="#0">http://www.correios.com.br/para-voce</a>
+                        <td class="test-SUCCESS"><a href="#0">1</a></td>
+                            <td class="test-SUCCESS"><a href="#0">http://www.correios.com.br/para-voce</a>
                             </td>
-                            <td class="test-PENDING"><a href="#0">Pre&ccedil;os e prazos</a>
+                            <td class="test-SUCCESS"><a href="#0">Pre&ccedil;os e prazos</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">19/01/2018</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">06624350</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">06624370</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">SEDEX</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">envelope</a>
+                            </td>
+                            <td class="test-SUCCESS"><a href="#0">Embalagem dos Correios</a>
                             </td>
                     </tr>
                 </tbody>
@@ -186,7 +204,7 @@
                                 </a>
                         </td>
                     <td width="100"><span class="top-level-step">SUCCESS</span></td>
-                    <td width="100"><span class="top-level-step">6.65s</span></td>
+                    <td width="100"><span class="top-level-step">6.75s</span></td>
                 </tr>
                 <tr class="test-SUCCESS">
                     <td width="60" class="step-icon">
@@ -203,20 +221,20 @@
                         <td width="100" class="SUCCESS-text">
                                 <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=1">
                                     <!-- Added invalid href-attribute to img for imgpreviewer -->
-                                    <img src="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png"
-                                         href="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png"
+                                    <img src="9abf7e243784ea81d55268bb750cc992cd1d01c8d2acbae9acddf2857bf1e1dd.png"
+                                         href="9abf7e243784ea81d55268bb750cc992cd1d01c8d2acbae9acddf2857bf1e1dd.png"
                                          class="screenshot"
                                          width="48" height="48"/>
                                 </a>
                         </td>
                     <td width="100"><span class="top-level-step">SUCCESS</span></td>
-                    <td width="100"><span class="top-level-step">2.41s</span></td>
+                    <td width="100"><span class="top-level-step">2.56s</span></td>
                 </tr>
-                <tr class="test-PENDING">
+                <tr class="test-SUCCESS">
                     <td width="60" class="step-icon">
                         <a name="2"/>
                             <span style="margin-left: 20px; margin-right: 5px;"
-                                  class="top-level-icon"><i class='fa fa-square-o pending-icon ' title='PENDING'></i></span>
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
                     </td>
                     <td>
                         <div class="step-description">
@@ -224,23 +242,23 @@
 
                         </div>
                     </td>
-                        <td width="100" class="PENDING-text">
-                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=2">
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=3">
                                     <!-- Added invalid href-attribute to img for imgpreviewer -->
-                                    <img src="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png"
-                                         href="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png"
+                                    <img src="41a2872ade2c1914a9b2210b93f1d418f4564234ce06eb9cbceea1dee07d83e8.png"
+                                         href="41a2872ade2c1914a9b2210b93f1d418f4564234ce06eb9cbceea1dee07d83e8.png"
                                          class="screenshot"
                                          width="48" height="48"/>
                                 </a>
                         </td>
-                    <td width="100"><span class="top-level-step">PENDING</span></td>
-                    <td width="100"><span class="top-level-step">0.3s</span></td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">0.73s</span></td>
                 </tr>
-                <tr class="test-PENDING">
+                <tr class="test-SUCCESS">
                     <td width="60" class="step-icon">
                         <a name="3"/>
                             <span style="margin-left: 20px; margin-right: 5px;"
-                                  class="top-level-icon"><i class='fa fa-square-o pending-icon ' title='PENDING'></i></span>
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
                     </td>
                     <td>
                         <div class="step-description">
@@ -248,16 +266,23 @@
 
                         </div>
                     </td>
-                        <td width="100" class="PENDING-text">
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=4">
+                                    <!-- Added invalid href-attribute to img for imgpreviewer -->
+                                    <img src="6718ec0a2b2abcf877a730ec10296d1c0b47f56dda44e89441971fb9fa747e9c.png"
+                                         href="6718ec0a2b2abcf877a730ec10296d1c0b47f56dda44e89441971fb9fa747e9c.png"
+                                         class="screenshot"
+                                         width="48" height="48"/>
+                                </a>
                         </td>
-                    <td width="100"><span class="top-level-step">PENDING</span></td>
-                    <td width="100"><span class="top-level-step">0s</span></td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">0.75s</span></td>
                 </tr>
-                <tr class="test-PENDING">
+                <tr class="test-SUCCESS">
                     <td width="60" class="step-icon">
                         <a name="4"/>
                             <span style="margin-left: 20px; margin-right: 5px;"
-                                  class="top-level-icon"><i class='fa fa-square-o pending-icon ' title='PENDING'></i></span>
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
                     </td>
                     <td>
                         <div class="step-description">
@@ -265,16 +290,23 @@
 
                         </div>
                     </td>
-                        <td width="100" class="PENDING-text">
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=5">
+                                    <!-- Added invalid href-attribute to img for imgpreviewer -->
+                                    <img src="decee93ce3053f48e8d87aacb107246409cd505f6729b48d9a0a79bd6057339a.png"
+                                         href="decee93ce3053f48e8d87aacb107246409cd505f6729b48d9a0a79bd6057339a.png"
+                                         class="screenshot"
+                                         width="48" height="48"/>
+                                </a>
                         </td>
-                    <td width="100"><span class="top-level-step">PENDING</span></td>
-                    <td width="100"><span class="top-level-step">0s</span></td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">0.75s</span></td>
                 </tr>
-                <tr class="test-PENDING">
+                <tr class="test-SUCCESS">
                     <td width="60" class="step-icon">
                         <a name="5"/>
                             <span style="margin-left: 20px; margin-right: 5px;"
-                                  class="top-level-icon"><i class='fa fa-square-o pending-icon ' title='PENDING'></i></span>
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
                     </td>
                     <td>
                         <div class="step-description">
@@ -282,15 +314,70 @@
 
                         </div>
                     </td>
-                        <td width="100" class="PENDING-text">
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=6">
+                                    <!-- Added invalid href-attribute to img for imgpreviewer -->
+                                    <img src="54e3447d1dcca5a259496b16a757efa1283f07fb27dfb93ea98937e53a933224.png"
+                                         href="54e3447d1dcca5a259496b16a757efa1283f07fb27dfb93ea98937e53a933224.png"
+                                         class="screenshot"
+                                         width="48" height="48"/>
+                                </a>
                         </td>
-                    <td width="100"><span class="top-level-step">PENDING</span></td>
-                    <td width="100"><span class="top-level-step">0s</span></td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">0.77s</span></td>
                 </tr>
-                <tr class="test-PENDING">
+                <tr class="test-SUCCESS">
+                    <td width="60" class="step-icon">
+                        <a name="6"/>
+                            <span style="margin-left: 20px; margin-right: 5px;"
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
+                    </td>
+                    <td>
+                        <div class="step-description">
+                            <span class="top-level-step">And seleciono o 'Formato' "&lt;formato&gt;"</span>
+
+                        </div>
+                    </td>
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=7">
+                                    <!-- Added invalid href-attribute to img for imgpreviewer -->
+                                    <img src="4458282a9800623be494ac2f0671211022e748c07d280a82672050a68549d7eb.png"
+                                         href="4458282a9800623be494ac2f0671211022e748c07d280a82672050a68549d7eb.png"
+                                         class="screenshot"
+                                         width="48" height="48"/>
+                                </a>
+                        </td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">6.67s</span></td>
+                </tr>
+                <tr class="test-SUCCESS">
+                    <td width="60" class="step-icon">
+                        <a name="7"/>
+                            <span style="margin-left: 20px; margin-right: 5px;"
+                                  class="top-level-icon"><i class='fa fa-check-square-o success-icon ' title='SUCCESS'></i></span>
+                    </td>
+                    <td>
+                        <div class="step-description">
+                            <span class="top-level-step">And seleciono 'Embalagem' "&lt;embalagem&gt;"</span>
+
+                        </div>
+                    </td>
+                        <td width="100" class="SUCCESS-text">
+                                <a href="6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html#screenshots?screenshot=8">
+                                    <!-- Added invalid href-attribute to img for imgpreviewer -->
+                                    <img src="6f473351005a5f35dada53039a0de45988e3d8ad28ad737d29d66cca48df87d1.png"
+                                         href="6f473351005a5f35dada53039a0de45988e3d8ad28ad737d29d66cca48df87d1.png"
+                                         class="screenshot"
+                                         width="48" height="48"/>
+                                </a>
+                        </td>
+                    <td width="100"><span class="top-level-step">SUCCESS</span></td>
+                    <td width="100"><span class="top-level-step">0.75s</span></td>
+                </tr>
+                <tr class="test-SUCCESS">
                     <td colspan="3"></td>
-                    <td width="100"><span class="top-level-step"><em>PENDING</em></span></td>
-                    <td width="100"><span class="top-level-step"><em>9.37s</em></span></td>
+                    <td width="100"><span class="top-level-step"><em>SUCCESS</em></span></td>
+                    <td width="100"><span class="top-level-step"><em>19.72s</em></span></td>
                 </tr>
 
             </table>
