--- a/exemplosParaPraticarAutomacao/bdd/report/output/folder/6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html
+++ b/exemplosParaPraticarAutomacao/bdd/report/output/folder/6abe2f1398c9525fb26255fe70a5d173373168734d65b59a9e2201c9f0557bb2_screenshots.html
@@ -92,7 +92,7 @@
             <a href="capabilities.html"><i class="fa fa-book"></i> Requirements</a>
         </li>
     </ul>
-    <span class="date-and-time"><a href="build-info.html"><i class="fa fa-info-circle"></i></a> Report generated 19-01-2018 11:37</span>
+    <span class="date-and-time"><a href="build-info.html"><i class="fa fa-info-circle"></i></a> Report generated 19-01-2018 14:51</span>
     <br style="clear:left"/>
 </div>
 
@@ -133,9 +133,9 @@
                 <table class="outcome-header">
                     <tr>
                         <td colspan="2" class="test-title-bar">
-                            <span class="outcome-icon"><i class='fa fa-square-o pending-icon fa-3x' title='PENDING'></i></span>
+                            <span class="outcome-icon"><i class='fa fa-check-square-o success-icon fa-3x' title='SUCCESS'></i></span>
                             <span class="test-case-title">
-                                <span class="pending-color">Carcular Valor De Uma Entrega Do CEP A At&eacute; CEP B
+                                <span class="success-color">Carcular Valor De Uma Entrega Do CEP A At&eacute; CEP B
                                     <span class="related-issue-title"></span>
                                 </span>
                             </span>
@@ -159,8 +159,14 @@
         <div class="slider-wrapper theme-default">
             <div id="slider">
                 <img src="c31e6715de49a05da5fd5db484dcf9cccfa8674c09871946d148ea1b6633ce62.png" title="Given estou na pagina inicial &quot;&lt;url&gt;&quot;" width="960"/>
+                <img src="9abf7e243784ea81d55268bb750cc992cd1d01c8d2acbae9acddf2857bf1e1dd.png" title="When clico na opcao de servico &quot;&lt;opcao&gt;&quot;" width="960"/>
                 <img src="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png" title="When clico na opcao de servico &quot;&lt;opcao&gt;&quot;" width="960"/>
-                <img src="fa3d31649ca7f6924244395081890981999213b57a772f2852ed837615514841.png" title="And insiro data no campo 'Data_da_postagem' &quot;&lt;dataPostagem&gt;&quot;: <span class='pending-color'>PENDING</span>" width="960"/>
+                <img src="41a2872ade2c1914a9b2210b93f1d418f4564234ce06eb9cbceea1dee07d83e8.png" title="And insiro data no campo 'Data_da_postagem' &quot;&lt;dataPostagem&gt;&quot;" width="960"/>
+                <img src="6718ec0a2b2abcf877a730ec10296d1c0b47f56dda44e89441971fb9fa747e9c.png" title="And insiro no campo 'CEP_de_origem' &quot;&lt;cepOrigem&gt;&quot;" width="960"/>
+                <img src="decee93ce3053f48e8d87aacb107246409cd505f6729b48d9a0a79bd6057339a.png" title="And insiro no campo 'CEP_de_destino' &quot;&lt;cepDestino&gt;&quot;" width="960"/>
+                <img src="54e3447d1dcca5a259496b16a757efa1283f07fb27dfb93ea98937e53a933224.png" title="And seleciono 'Tipo_de_servi&ccedil;o' &quot;&lt;tServico&gt;&quot;" width="960"/>
+                <img src="4458282a9800623be494ac2f0671211022e748c07d280a82672050a68549d7eb.png" title="And seleciono o 'Formato' &quot;&lt;formato&gt;&quot;" width="960"/>
+                <img src="scaled_6f473351005a5f35dada53039a0de45988e3d8ad28ad737d29d66cca48df87d1.png" title="And seleciono 'Embalagem' &quot;&lt;embalagem&gt;&quot;: <span class='success-color'>SUCCESS</span>" width="960"/>
             </div>
         </div>
 
